Cleanup for public version

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # app Name and Environment
 ENVIRONMENT=development
-APPNAME=ether-api
+APPNAME=ether-api-public
 CFCONFIG_ADMINPASSWORD=aNewPass00rd!
 TZ=America/Los_Angeles
 BOX_SERVER_APP_CFENGINE=lucee@5.4.2+17
